--- a/src/styles/message-composer.scss
+++ b/src/styles/message-composer.scss
@@ -3,6 +3,7 @@
 .messageComposer {
   flex: 0 0 auto;
   display: flex;
+  padding: 20pt;
 }
 
 .input {
